feat: add pokemons details

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             android:name=".view.MainActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".view.DetailActivity" />
     </application>
 
 </manifest>
